--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,10 @@
+# SPDX-FileCopyrightText: 2024 Benedikt Franke <benedikt.franke@dlr.de>
+# SPDX-FileCopyrightText: 2024 Florian Heinrich <florian.heinrich@dlr.de>
+#
+# SPDX-License-Identifier: Apache-2.0
+
 *
-!dlr
+!src
 !pyproject.toml
 !README.md
 **/__pycache__
