--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,8 @@
+; SPDX-FileCopyrightText: 2024 Benedikt Franke <benedikt.franke@dlr.de>
+; SPDX-FileCopyrightText: 2024 Florian Heinrich <florian.heinrich@dlr.de>
+;
+; SPDX-License-Identifier: Apache-2.0
+
 [tox]
 envlist = py{310,311}
 
@@ -19,43 +24,3 @@ deps =
 ;extras = all
 commands =
   safety check
-
-[testenv:licenses]
-basepython = python
-deps =
-  pip-licenses
-;extras = all
-commands =
-  pip-licenses \
-    --from=mixed \
-    --format=csv \
-    --output-file=./licenses/license_info.csv
-  pip-licenses \
-    --from=mixed \
-    --format=json \
-    --output-file=./licenses/license_info.json
-  pip-licenses \
-    --from=mixed \
-    --format=markdown \
-    --output-file=./licenses/license_info.md
-  pip-licenses \
-    --from=mixed \
-    --format=csv \
-    --no-version \
-    --output-file=./licenses/license_info.no_versions.csv
-  pip-licenses \
-    --from=mixed \
-    --format=json \
-    --no-version \
-    --output-file=./licenses/license_info.no_versions.json
-  pip-licenses \
-    --from=mixed \
-    --format=markdown \
-    --no-version \
-    --output-file=./licenses/license_info.no_versions.md
-  pip-licenses \
-    --from=mixed \
-    --format=plain-vertical \
-    --with-license-file \
-    --no-license-path \
-    --output-file=./licenses/license.txt
