--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,3 +1,7 @@
+// SPDX-FileCopyrightText: 2024 Benedikt Franke <benedikt.franke@dlr.de>
+// SPDX-FileCopyrightText: 2024 Florian Heinrich <florian.heinrich@dlr.de>
+//
+// SPDX-License-Identifier: Apache-2.0
 {
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
@@ -22,9 +26,8 @@
             "justMyCode": false,
             "env": {
                 "FL_DEMONSTRATOR_BASE_URL": "http://localhost:8000",
-                "FL_DEMONSTRATOR_TRAINING_SCRIPT_PATH": "dlr/fl/examples/mnist/main.py",
-                "FL_CLIENT_SETTINGS_MODULE": "dlr.fl.examples.mnist.settings.Settings",
-                "FL_CLIENT_ADDITIONAL_SYS_PATH": "${workspaceRootPath}/dlr/fl/examples/mnist"
+                "FL_CLIENT_SETTINGS_MODULE": "settings.Settings",
+                "FL_CLIENT_ADDITIONAL_SYS_PATH": "${workspaceRootPath}/src"
             }
         }
     ]
