--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: 2024 Benedikt Franke <benedikt.franke@dlr.de>
+# SPDX-FileCopyrightText: 2024 Florian Heinrich <florian.heinrich@dlr.de>
+#
+# SPDX-License-Identifier: Apache-2.0
+
 [project]
 # This is the name of your project. The first time you publish this
 # package, this name will be registered for you. It will determine how
@@ -17,7 +22,7 @@ name = "fl-demonstrator-mnist"  # Required
 #
 # For a discussion on single-sourcing the version, see
 # https://packaging.python.org/guides/single-sourcing-package-version/
-version = "0.0.2.dev0"  # Required
+version = "0.0.3.dev0"  # Required
 
 # This is a one-line description or tagline of what your project does. This
 # corresponds to the "Summary" metadata field:
@@ -43,7 +48,7 @@ requires-python = ">=3.10"
 # This is either text indicating the license for the distribution, or a file
 # that contains the license
 # https://packaging.python.org/en/latest/specifications/core-metadata/#license
-license = {file = "LICENSE"}
+license = {file = "LICENSES/Apache-2.0.txt"}
 
 # This field adds keywords for your project which will appear on the
 # project page. What does your project relate to?
@@ -103,13 +108,13 @@ classifiers = [  # Optional
 # https://packaging.python.org/discussions/install-requires-vs-requirements/
 dependencies = [  # Optional
   "boto3~=1.28.2",  # used for S3 storage  # cspell:ignore boto
-  "fl-demonstrator-client @ git+https://mnist-example:EEKvxrARr8gDGxx9r4oW@gitlab.dlr.de/ki-cx-federatedlearning/fl-demonstrator-client.git@main",  # noqa: E501
-  "dlr-logging @ git+https://github.com/DLR-KI/fl-logging-base.git@main",  # noqa: E501
+  "fl-demonstrator-client @ git+https://github.com/DLR-KI/fl-demonstrator-client.git@main",
+  "dlr-logging @ git+https://github.com/DLR-KI/fl-logging-base.git@main",
   "numpy~=1.24.3",
   "tensorboard~=2.13.0",
-  "torch~=2.0.1",
-  "torcheval~=0.0.6",
-  "torchvision~=0.15.2",
+  "torch~=2.3",
+  "torcheval~=0.0.7",
+  "torchvision~=0.18",
 ]
 
 # List additional groups of dependencies here (e.g. development
@@ -123,6 +128,7 @@ dependencies = [  # Optional
 [project.optional-dependencies]  # Optional
 dev = [
   "pre-commit~=3.3.2",
+  "reuse~=3.0.2",
   "tox~=4.5.1",
 ]
 test = [
@@ -130,13 +136,14 @@ test = [
   "coverage~=7.2.7",
   "flake8~=6.0.0",
   "flake8-pyproject~=1.2.3",
+  "licensecheck",  # no version, install latest version
   "mypy~=1.3.0",
   #"pytest~=7.4.0",
   "shellcheck-py~=0.9.0.6",
 ]
 stubs = []
 doc = [
-  "portray @ git+https://github.com/HeinrichAD/portray.git@v1.8.0-dev",
+  "portray @ git+https://github.com/HeinrichAD/portray.git@develop",
   #"plantuml-markdown~=3.9.2",  # post-install: cp plantuml_markdown.py into markdown/extensions
 ]
 all = ["fl-demonstrator-mnist[dev,test,stubs,doc]"]
@@ -162,21 +169,52 @@ all = ["fl-demonstrator-mnist[dev,test,stubs,doc]"]
 # The following would provide a command line executable called `fl-demonstrator-mnist`
 # which executes the function `main` inside `__main__.py` from this package when invoked.
 [project.scripts]  # Optional
-#fl-mnist = "dlr.fl.examples.mnist.__main__:main"
+#fl-mnist = "src.__main__:main"
 
 # This is configuration specific to the `setuptools` build backend.
 # If you are using a different build backend, you will need to change this.
 [tool.setuptools]
 # If there are data files included in your packages that need to be
 # installed, specify them here.
-packages = ["dlr.fl.examples.mnist"]
-package-data = {"dlr.fl.examples.mnist" = ["py.typed"]}
+packages = ["src"]
+package-data = {"src" = ["py.typed"]}
+license-files = ["LICENSES/*.txt"]
 
 [build-system]
 # These are the assumed default build requirements from pip:
 # https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
 requires = ["setuptools>=43.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
+#######################################################################################################################
+
+# licensecheck
+# https://github.com/FHPythonUtils/LicenseCheck/blob/master/README.md
+
+[tool.licensecheck]
+using = "PEP631"
+#using = "PEP631:dev;test;stubs;doc"
+zero = true
+ignore_packages = [
+  # Intel oneAPI Math Kernel Library (mkl)
+  # Comes with PyTorch 2.3.0
+  # https://cdrdv2-public.intel.com/749362/intel-simplified-license-software-october-2022.pdf
+  # Note: - Usage and Redistribution is allowed. But Redistribution requires a copyright notice
+  #       - The docker container do not include the mkl library (at the moment)
+  "mkl",
+  # https://docs.nvidia.com/cuda/eula/index.html
+  "nvidia-cublas-cu12",
+  "nvidia-cuda-cupti-cu12",
+  "nvidia-cuda-nvrtc-cu12",
+  "nvidia-cuda-runtime-cu12",
+  "nvidia-cudnn-cu12",  # https://docs.nvidia.com/deeplearning/cudnn/sla/index.html
+  "nvidia-cufft-cu12",
+  "nvidia-curand-cu12",
+  "nvidia-cusolver-cu12",
+  "nvidia-cusparse-cu12",  # https://docs.nvidia.com/cuda/cusparselt/license.html
+  "nvidia-nccl-cu12",  # https://docs.nvidia.com/deeplearning/nccl/sla/index.html
+  "nvidia-nvtx-cu12",  # https://docs.nvidia.com/nvtx/eula/index.html
+]
 
 #######################################################################################################################
 
@@ -232,7 +270,7 @@ ignore_missing_imports = true
 
 [tool.coverage.run]
 branch = true
-source = "dlr.fl.examples.mnist"
+source = "src"
 
 [tool.coverage.report]
 # Regexes for lines to exclude from consideration
@@ -262,7 +300,7 @@ ignore_errors = true
 skip_empty = true
 
 [tool.coverage.html]
-title = "Coverage report for dlr.fl.examples.mnist"
+title = "Coverage report for the MNIST example client"
 
 #######################################################################################################################
 
