--- a/server.env
+++ b/server.env
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: 2024 Benedikt Franke <benedikt.franke@dlr.de>
+# SPDX-FileCopyrightText: 2024 Florian Heinrich <florian.heinrich@dlr.de>
+#
+# SPDX-License-Identifier: Apache-2.0
+
 FL_POSTGRES_HOST=db
 FL_POSTGRES_PORT=5432
 FL_POSTGRES_DBNAME=demo
